--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,8 @@ li {
     margin: 15px;
     border-radius: 5px;
     padding: 7px;
+    left: 30%;
+
 }
 
 .Page-Four-div2,
@@ -220,6 +222,7 @@ li {
     border-radius: 5px;
     margin: 15px;
     padding: 7px;
+    left: 30%;
 }
 
 .page4boxmain-div{
