--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,11 @@ li {
     text-align: left;
     margin-left: 7px;
 }
+
+footer{
+    color: white;
+    text-align: center;
+    background-color: rgb(115, 103, 103) ;
+    height: 50px;
+    padding: 25px;
+}
